packages/kit/test/apps/basics/src/routes/errors/endpoint-shadow-not-ok/+page.server.js
import { error } from '@sveltejs/kit/data';

/** @type {import('@sveltejs/kit').RequestHandler} */
export function GET() {
	throw error(555, undefined);
}
